@@ -2720,6 +2720,18 @@ class Parser {
 				$subjPage = $this->mTitle->getSubjectPage();
 				$value = wfEscapeWikiText( $subjPage->getPrefixedUrl() );
 				break;
+			case 'pageid': // requested in bug 23427
+				$pageid = $this->getTitle()->getArticleId();
+				if( $pageid == 0 ) {
+					# 0 means the page doesn't exist in the database,
+					# which means the user is previewing a new page.
+					# The vary-revision flag must be set, because the magic word
+					# will have a different value once the page is saved.
+					$this->mOutput->setFlag( 'vary-revision' );
+					wfDebug( __METHOD__ . ": {{PAGEID}} used in a new page, setting vary-revision...\n" );
+				}
+				$value = $pageid ? $pageid : null;
+				break;
 			case 'revisionid':
 				# Let the edit saving system know we should parse the page
 				# *after* a revision ID has been assigned.
